Add conditional data

--- a/sdv/tlp/conditional-sampling.ipynb
+++ b/sdv/tlp/conditional-sampling.ipynb
@@ -52,7 +52,7 @@
    "outputs": [],
    "source": [
     "df = pd.read_excel(\n",
-    "    '../../data/real/TLP_Identia.xlsx'\n",
+    "    '../../data/tlp/TLP_Identia.xlsx'\n",
     ")"
    ]
   },
@@ -2814,7 +2814,7 @@
        "</svg>\n"
       ],
       "text/plain": [
-       "<graphviz.graphs.Digraph at 0x249c13fc7c0>"
+       "<graphviz.graphs.Digraph at 0x1b4f390e8f0>"
       ]
      },
      "execution_count": 13,
@@ -3102,7 +3102,7 @@
        "</svg>\n"
       ],
       "text/plain": [
-       "<graphviz.graphs.Digraph at 0x249c13fc8e0>"
+       "<graphviz.graphs.Digraph at 0x1b4f390ca60>"
       ]
      },
      "execution_count": 17,
@@ -3128,6 +3128,48 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "ED_2Clases\n",
+       "D    235\n",
+       "H     74\n",
+       "Name: count, dtype: int64"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df['ED_2Clases'].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sdv.sampling import Condition\n",
+    "\n",
+    "class_d = Condition(\n",
+    "    num_rows=300,\n",
+    "    column_values={'ED_2Clases': 'D'}\n",
+    ")\n",
+    "\n",
+    "class_h = Condition(\n",
+    "    num_rows=300,\n",
+    "    column_values={'ED_2Clases': 'H'}\n",
+    ")"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -3143,7 +3185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3161,7 +3203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3170,7 +3212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3179,7 +3221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3188,62 +3230,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "ED_2Clases\n",
-       "D    235\n",
-       "H     74\n",
-       "Name: count, dtype: int64"
-      ]
-     },
-     "execution_count": 23,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df['ED_2Clases'].value_counts()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 24,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from sdv.sampling import Condition\n",
-    "\n",
-    "class_d = Condition(\n",
-    "    num_rows=250,\n",
-    "    column_values={'ED_2Clases': 'D'}\n",
-    ")\n",
-    "\n",
-    "class_h = Condition(\n",
-    "    num_rows=250,\n",
-    "    column_values={'ED_2Clases': 'H'}\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Sampling conditions: 100%|██████████| 500/500 [00:01<00:00, 339.77it/s]\n"
+      "Sampling conditions: 100%|██████████| 600/600 [00:09<00:00, 66.54it/s]\n"
      ]
     }
    ],
    "source": [
     "gc_synthetic_data = gc_synthesizer.sample_from_conditions(\n",
     "    conditions=[class_d, class_h],\n",
+    "    batch_size = 50,\n",
+    "    max_tries_per_batch = 100,\n",
     "    output_file_path='../../data/tlp/conditional-gc.csv'\n",
     ")"
    ]
@@ -3257,7 +3259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3276,7 +3278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3285,7 +3287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -3519,14 +3521,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Gen. (-7.91) | Discrim. (0.46): 100%|██████████| 1000/1000 [21:24<00:00,  1.28s/it]\n"
+      "Gen. (-6.35) | Discrim. (1.93): 100%|██████████| 1000/1000 [05:45<00:00,  2.89it/s]\n"
      ]
     }
    ],
@@ -3536,22 +3538,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Sampling conditions:  98%|█████████▊| 492/500 [00:04<00:00, 107.70it/s]c:\\Users\\jgala\\Documents\\uned\\tfm\\synthetic-data\\.venv\\lib\\site-packages\\sdv\\single_table\\base.py:915: PerformanceWarning: DataFrame is highly fragmented.  This is usually the result of calling `frame.insert` many times, which has poor performance.  Consider joining all columns at once using pd.concat(axis=1) instead. To get a de-fragmented frame, use `newframe = frame.copy()`\n",
+      "Sampling conditions:  50%|████▉     | 298/600 [00:12<00:13, 22.30it/s]c:\\Users\\jgala\\uned\\tfm\\synthetic-data\\.venv\\lib\\site-packages\\sdv\\single_table\\base.py:915: PerformanceWarning: DataFrame is highly fragmented.  This is usually the result of calling `frame.insert` many times, which has poor performance.  Consider joining all columns at once using pd.concat(axis=1) instead. To get a de-fragmented frame, use `newframe = frame.copy()`\n",
       "  sampled_rows[COND_IDX] = dataframe[COND_IDX].to_numpy()[: len(sampled_rows)]\n",
-      "Sampling conditions: 100%|██████████| 500/500 [00:05<00:00, 86.05it/s] \n"
+      "Sampling conditions: 100%|██████████| 600/600 [00:29<00:00, 21.04it/s]c:\\Users\\jgala\\uned\\tfm\\synthetic-data\\.venv\\lib\\site-packages\\sdv\\single_table\\base.py:915: PerformanceWarning: DataFrame is highly fragmented.  This is usually the result of calling `frame.insert` many times, which has poor performance.  Consider joining all columns at once using pd.concat(axis=1) instead. To get a de-fragmented frame, use `newframe = frame.copy()`\n",
+      "  sampled_rows[COND_IDX] = dataframe[COND_IDX].to_numpy()[: len(sampled_rows)]\n",
+      "Sampling conditions: 100%|██████████| 600/600 [00:29<00:00, 20.13it/s]\n"
      ]
     }
    ],
    "source": [
     "ctgan_synthetic_data = ctgan_synthesizer.sample_from_conditions(\n",
     "    conditions=[class_d, class_h],\n",
+    "    batch_size = 50,\n",
+    "    max_tries_per_batch = 100,\n",
     "    output_file_path='../../data/tlp/conditional-ctgan.csv'\n",
     ")"
    ]
@@ -3565,7 +3571,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3583,7 +3589,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3592,7 +3598,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3601,14 +3607,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Loss: -288.250: 100%|██████████| 1000/1000 [07:51<00:00,  2.12it/s]\n"
+      "Loss: -250.942: 100%|██████████| 1000/1000 [02:49<00:00,  5.91it/s]\n"
      ]
     }
    ],
@@ -3618,24 +3624,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Sampling conditions:  50%|█████     | 250/500 [00:01<00:01, 173.83it/s]c:\\Users\\jgala\\Documents\\uned\\tfm\\synthetic-data\\.venv\\lib\\site-packages\\sdv\\single_table\\base.py:915: PerformanceWarning: DataFrame is highly fragmented.  This is usually the result of calling `frame.insert` many times, which has poor performance.  Consider joining all columns at once using pd.concat(axis=1) instead. To get a de-fragmented frame, use `newframe = frame.copy()`\n",
+      "Sampling conditions:  50%|████▉     | 299/600 [00:11<00:12, 24.59it/s]c:\\Users\\jgala\\uned\\tfm\\synthetic-data\\.venv\\lib\\site-packages\\sdv\\single_table\\base.py:915: PerformanceWarning: DataFrame is highly fragmented.  This is usually the result of calling `frame.insert` many times, which has poor performance.  Consider joining all columns at once using pd.concat(axis=1) instead. To get a de-fragmented frame, use `newframe = frame.copy()`\n",
       "  sampled_rows[COND_IDX] = dataframe[COND_IDX].to_numpy()[: len(sampled_rows)]\n",
-      "Sampling conditions: 100%|█████████▉| 498/500 [00:03<00:00, 148.42it/s]c:\\Users\\jgala\\Documents\\uned\\tfm\\synthetic-data\\.venv\\lib\\site-packages\\sdv\\single_table\\base.py:915: PerformanceWarning: DataFrame is highly fragmented.  This is usually the result of calling `frame.insert` many times, which has poor performance.  Consider joining all columns at once using pd.concat(axis=1) instead. To get a de-fragmented frame, use `newframe = frame.copy()`\n",
+      "Sampling conditions: 100%|██████████| 600/600 [00:27<00:00, 18.02it/s]c:\\Users\\jgala\\uned\\tfm\\synthetic-data\\.venv\\lib\\site-packages\\sdv\\single_table\\base.py:915: PerformanceWarning: DataFrame is highly fragmented.  This is usually the result of calling `frame.insert` many times, which has poor performance.  Consider joining all columns at once using pd.concat(axis=1) instead. To get a de-fragmented frame, use `newframe = frame.copy()`\n",
       "  sampled_rows[COND_IDX] = dataframe[COND_IDX].to_numpy()[: len(sampled_rows)]\n",
-      "Sampling conditions: 100%|██████████| 500/500 [00:04<00:00, 104.92it/s]\n"
+      "Sampling conditions: 100%|██████████| 600/600 [00:27<00:00, 22.06it/s]\n"
      ]
     }
    ],
    "source": [
     "tvaes_synthetic_data = tvaes_synthesizer.sample_from_conditions(\n",
     "    conditions=[class_d, class_h],\n",
+    "    batch_size = 50,\n",
+    "    max_tries_per_batch = 100,\n",
     "    output_file_path='../../data/tlp/conditional-tvaes.csv'\n",
     ")"
    ]
@@ -3656,7 +3664,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -3665,13 +3673,20 @@
      "text": [
       "Generating report ...\n",
       "\n",
-      "(1/2) Evaluating Data Validity: |██████████| 213/213 [00:00<00:00, 3511.92it/s]|\n",
-      "Data Validity Score: 96.52%\n",
+      "|          | 0/213 [00:00<?, ?it/s]|"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(1/2) Evaluating Data Validity: |██████████| 213/213 [00:00<00:00, 2612.65it/s]|\n",
+      "Data Validity Score: 96.54%\n",
       "\n",
-      "(2/2) Evaluating Data Structure: |██████████| 1/1 [00:00<00:00, 97.12it/s]|\n",
+      "(2/2) Evaluating Data Structure: |██████████| 1/1 [00:00<00:00, 106.04it/s]|\n",
       "Data Structure Score: 100.0%\n",
       "\n",
-      "Overall Score (Average): 98.26%\n",
+      "Overall Score (Average): 98.27%\n",
       "\n"
      ]
     }
@@ -3688,7 +3703,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -3697,13 +3712,13 @@
      "text": [
       "Generating report ...\n",
       "\n",
-      "(1/2) Evaluating Column Shapes: |██████████| 213/213 [00:00<00:00, 1757.19it/s]|\n",
-      "Column Shapes Score: 83.13%\n",
+      "(1/2) Evaluating Column Shapes: |██████████| 213/213 [00:00<00:00, 1100.55it/s]|\n",
+      "Column Shapes Score: 83.04%\n",
       "\n",
-      "(2/2) Evaluating Column Pair Trends: |██████████| 22578/22578 [01:08<00:00, 331.80it/s]|\n",
-      "Column Pair Trends Score: 80.92%\n",
+      "(2/2) Evaluating Column Pair Trends: |██████████| 22578/22578 [01:29<00:00, 251.36it/s]|\n",
+      "Column Pair Trends Score: 79.96%\n",
       "\n",
-      "Overall Score (Average): 82.02%\n",
+      "Overall Score (Average): 81.5%\n",
       "\n"
      ]
     }
@@ -3720,7 +3735,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3730,7 +3745,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3739,7 +3754,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3765,7 +3780,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -3774,13 +3789,13 @@
      "text": [
       "Generating report ...\n",
       "\n",
-      "(1/2) Evaluating Data Validity: |██████████| 213/213 [00:00<00:00, 3657.81it/s]|\n",
-      "Data Validity Score: 95.17%\n",
+      "(1/2) Evaluating Data Validity: |██████████| 213/213 [00:00<00:00, 2388.24it/s]|\n",
+      "Data Validity Score: 95.09%\n",
       "\n",
-      "(2/2) Evaluating Data Structure: |██████████| 1/1 [00:00<00:00, 251.79it/s]|\n",
+      "(2/2) Evaluating Data Structure: |██████████| 1/1 [00:00<00:00, 173.69it/s]|\n",
       "Data Structure Score: 100.0%\n",
       "\n",
-      "Overall Score (Average): 97.58%\n",
+      "Overall Score (Average): 97.54%\n",
       "\n"
      ]
     }
@@ -3795,7 +3810,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -3804,13 +3819,13 @@
      "text": [
       "Generating report ...\n",
       "\n",
-      "(1/2) Evaluating Column Shapes: |██████████| 213/213 [00:00<00:00, 1215.91it/s]|\n",
-      "Column Shapes Score: 81.21%\n",
+      "(1/2) Evaluating Column Shapes: |██████████| 213/213 [00:00<00:00, 1222.74it/s]|\n",
+      "Column Shapes Score: 81.39%\n",
       "\n",
-      "(2/2) Evaluating Column Pair Trends: |██████████| 22578/22578 [01:10<00:00, 319.73it/s]|\n",
-      "Column Pair Trends Score: 76.16%\n",
+      "(2/2) Evaluating Column Pair Trends: |██████████| 22578/22578 [01:34<00:00, 238.73it/s]|\n",
+      "Column Pair Trends Score: 75.23%\n",
       "\n",
-      "Overall Score (Average): 78.69%\n",
+      "Overall Score (Average): 78.31%\n",
       "\n"
      ]
     }
@@ -3825,7 +3840,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3835,7 +3850,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3844,7 +3859,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3867,7 +3882,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -3876,13 +3891,13 @@
      "text": [
       "Generating report ...\n",
       "\n",
-      "(1/2) Evaluating Data Validity: |██████████| 213/213 [00:00<00:00, 3629.26it/s]|\n",
-      "Data Validity Score: 99.03%\n",
+      "(1/2) Evaluating Data Validity: |██████████| 213/213 [00:00<00:00, 2372.44it/s]|\n",
+      "Data Validity Score: 99.13%\n",
       "\n",
-      "(2/2) Evaluating Data Structure: |██████████| 1/1 [00:00<00:00, 162.97it/s]|\n",
+      "(2/2) Evaluating Data Structure: |██████████| 1/1 [00:00<00:00, 203.22it/s]|\n",
       "Data Structure Score: 100.0%\n",
       "\n",
-      "Overall Score (Average): 99.52%\n",
+      "Overall Score (Average): 99.57%\n",
       "\n"
      ]
     }
@@ -3897,7 +3912,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -3906,13 +3921,13 @@
      "text": [
       "Generating report ...\n",
       "\n",
-      "(1/2) Evaluating Column Shapes: |██████████| 213/213 [00:00<00:00, 1413.40it/s]|\n",
-      "Column Shapes Score: 87.61%\n",
+      "(1/2) Evaluating Column Shapes: |██████████| 213/213 [00:00<00:00, 1340.84it/s]|\n",
+      "Column Shapes Score: 86.7%\n",
       "\n",
-      "(2/2) Evaluating Column Pair Trends: |██████████| 22578/22578 [01:10<00:00, 320.64it/s]|\n",
-      "Column Pair Trends Score: 79.11%\n",
+      "(2/2) Evaluating Column Pair Trends: |██████████| 22578/22578 [01:38<00:00, 229.65it/s]|\n",
+      "Column Pair Trends Score: 77.42%\n",
       "\n",
-      "Overall Score (Average): 83.36%\n",
+      "Overall Score (Average): 82.06%\n",
       "\n"
      ]
     }
@@ -3927,7 +3942,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3937,7 +3952,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3946,7 +3961,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
