--- a/autogluon/tlp/autogluon_tlp.ipynb
+++ b/autogluon/tlp/autogluon_tlp.ipynb
@@ -19,115 +19,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_excel('../../data/tlp/TLP_Identia.xlsx')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "drop_columns = [\n",
-    "    'ISC.FPacientes.IDUsuario',\n",
-    "    'ISC.FPacientes.etiquetaDiagnosticaExpTLP',\n",
-    "    'ISC.FPacientes.etiquetaDiagnostica',\n",
-    "    'ED_MMSE_2Clases',\n",
-    "    'ISC.resultadosCovid.numDosis',\n",
-    "    'ISC.resultadosCovid.numVecesCovid',\n",
-    "    'ISC.resultadosCovid.numVecesCovid_mode',\n",
-    "    'ISC.resultadosCovid.pasadoCovid',\n",
-    "    'ISC.resultadosCovid.sentimientoAislado',\n",
-    "    'ISC.resultadosCovid.sentimientoAislado_mediaFiltro',\n",
-    "    'ISC.resultadosCovid.sentimientoAislado_mode',\n",
-    "    'ISC.resultadosCovid.sintomaCansancio',\n",
-    "    'ISC.resultadosCovid.sintomaDiarrea',\n",
-    "    'ISC.resultadosCovid.sintomaDifRespirar',\n",
-    "    'ISC.resultadosCovid.sintomaDolCabeza',\n",
-    "    'ISC.resultadosCovid.sintomaDolGarganta',\n",
-    "    'ISC.resultadosCovid.sintomaDolMuscular',\n",
-    "    'ISC.resultadosCovid.sintomaEscalofrios',\n",
-    "    'ISC.resultadosCovid.sintomaFiebre',\n",
-    "    'ISC.resultadosCovid.sintomaOtro',\n",
-    "    'ISC.resultadosCovid.sintomaOtroString',\n",
-    "    'ISC.resultadosCovid.sintomaPerGusto',\n",
-    "    'ISC.resultadosCovid.sintomaPerOlfato',\n",
-    "    'ISC.resultadosCovid.vacunado',\n",
-    "    'ISC.resultadosObservacion.añosSinFumar',\n",
-    "    'ISC.resultadosObservacion.añosSinFumar_Rangos',\n",
-    "    'ISC.resultadosObservacion.consumoAlcohol_UBEsemanal',\n",
-    "    'ISC.resultadosObservacion.consumoAlcohol_UBEsemanal_knn',\n",
-    "    'ISC.resultadosObservacion.consumoAlcohol_UBEsemanal_mode&rangoEdad',\n",
-    "    'ISC.resultadosObservacion.enfermedadesAltTiroides',\n",
-    "    'ISC.resultadosObservacion.enfermedadesAntecedentesCardiacos',\n",
-    "    'ISC.resultadosObservacion.enfermedadesCardiopatiaIsquemica',\n",
-    "    'ISC.resultadosObservacion.enfermedadesHepatica',\n",
-    "    'ISC.resultadosObservacion.enfermedadesNinguna',\n",
-    "    'ISC.resultadosObservacion.enfermedadesOtros',\n",
-    "    'ISC.resultadosObservacion.enfermedadesRenal',\n",
-    "    'ISC.resultadosObservacion.entorno',\n",
-    "    'ISC.resultadosObservacion.familiaresAlzheimer',\n",
-    "    'ISC.resultadosObservacion.familiaresOtraDemencia',\n",
-    "    'ISC.resultadosObservacion.fumador',\n",
-    "    'ISC.resultadosObservacion.numCigarros',\n",
-    "    'ISC.resultadosObservacion.numCigarrosDia_knn',\n",
-    "    'ISC.resultadosObservacion.numCigarrosDia_mode&rangoEdad',\n",
-    "    'ISC.resultadosObservacion.tratCronico',\n",
-    "    'ISC.resultadosObservacion.tratPsicologic',\n",
-    "    'ISC.resultadosObservacion.tratPsiquiatrico',\n",
-    "    'ISC.resultadosOtros.frecOlvidos',\n",
-    "    'ISC.resultadosOtros.frecUsoEmail',\n",
-    "    'ISC.resultadosOtros.frecUsoMovil',\n",
-    "    'ISC.resultadosOtros.frecUsoOrdenador',\n",
-    "    'ISC.resultadosOtros.frecUsoRSociales',\n",
-    "    'ISC.resultadosOtros.frecUsoTele',\n",
-    "    'ISC.resultadosOtros.nivelActFisica',\n",
-    "    'ISC.resultadosOtros.nivelSociabilidad',\n",
-    "    'ISC.resultadosReservaCognitiva.actividadLectora',\n",
-    "    'ISC.resultadosReservaCognitiva.cursos',\n",
-    "    'ISC.resultadosReservaCognitiva.escolaridadPadres',\n",
-    "    'ISC.resultadosReservaCognitiva.formacionMusical',\n",
-    "    'ISC.resultadosReservaCognitiva.juegos',\n",
-    "    'ISC.resultadosWFQ.DE_array'\n",
-    "]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "pt_columns = [column for column in df.columns if 'PT' in column ]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "pz_columns = [column for column in df.columns if 'PZ' in column ]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "pdc_columns = [column for column in df.columns if 'PDC' in column]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "drop_columns.extend(pt_columns)\n",
-    "drop_columns.extend(pz_columns)\n",
-    "drop_columns.extend(pdc_columns)"
+    "df = pd.read_csv('../../data/tlp/preprocesado.csv')"
    ]
   },
   {
@@ -399,8 +291,6 @@
     }
    ],
    "source": [
-    "df.drop(columns=drop_columns, inplace=True)\n",
-    "df.replace([np.inf, -np.inf], 0, inplace=True)\n",
     "df.head()"
    ]
   },
@@ -436,7 +326,7 @@
     "    problem_type='binary',\n",
     "    eval_metric='roc_auc',\n",
     "    sample_weight='balance_weight',\n",
-    "    path='AutogluonModels/real/v1'\n",
+    "    path='AutogluonModels/real/v2'\n",
     "    )"
    ]
   },
@@ -1234,9 +1124,10 @@
    "source": [
     "predictor.fit(\n",
     "    train_data = df_train,\n",
-    "    presets = ['best_quality'],\n",
-    "    time_limit = 3600,\n",
+    "    presets = ['high_quality'],\n",
+    "    time_limit = 2 * 3600,\n",
     "    auto_stack = True,\n",
+    "    excluded_model_types=['KNN','RF','XT', 'LR'],\n",
     "    verbosity = 2\n",
     ")"
    ]
@@ -2564,9 +2455,10 @@
     }
    ],
    "source": [
-    "predictor.leaderboard(\n",
-    "    df_train,\n",
+    "predictors = predictor.leaderboard(\n",
+    "    df_test,\n",
     "    extra_metrics = auxiliary_metrics,\n",
+    "    extra_info=True,\n",
     "    silent=True\n",
     ")"
    ]
