--- a/autogluon/tlp/autogluon_tlp_synthetic_tvaes.ipynb
+++ b/autogluon/tlp/autogluon_tlp_synthetic_tvaes.ipynb
@@ -5412,12 +5412,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'predictor' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[1], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m predictors \u001b[38;5;241m=\u001b[39m \u001b[43mpredictor\u001b[49m\u001b[38;5;241m.\u001b[39mleaderboard(\n\u001b[0;32m      2\u001b[0m     df_test,\n\u001b[0;32m      3\u001b[0m     extra_metrics \u001b[38;5;241m=\u001b[39m auxiliary_metrics,\n\u001b[0;32m      4\u001b[0m     extra_info\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mTrue\u001b[39;00m,\n\u001b[0;32m      5\u001b[0m     silent\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mTrue\u001b[39;00m\n\u001b[0;32m      6\u001b[0m )\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'predictor' is not defined"
+     ]
+    }
+   ],
    "source": [
     "predictors = predictor.leaderboard(\n",
-    "    df_train,\n",
+    "    df_test,\n",
     "    extra_metrics = auxiliary_metrics,\n",
     "    extra_info=True,\n",
     "    silent=True\n",
