--- a/autogluon/tlp/autogluon_tlp_synthetic_tvaes.ipynb
+++ b/autogluon/tlp/autogluon_tlp_synthetic_tvaes.ipynb
@@ -326,7 +326,7 @@
     "    problem_type='binary',\n",
     "    eval_metric='roc_auc',\n",
     "    sample_weight='balance_weight',\n",
-    "    path='AutogluonModels/synthetic/tvaes/v2'\n",
+    "    path='AutogluonModels/synthetic/tvaes/v3'\n",
     "    )"
    ]
   },
@@ -2628,7 +2628,7 @@
     "    presets = ['high_quality'],\n",
     "    time_limit = 2 * 3600,\n",
     "    auto_stack = True,\n",
-    "    excluded_model_types=['KNN','RF','XT', 'LR'],\n",
+    "    # excluded_model_types=['KNN','RF','XT', 'LR'],\n",
     "    verbosity = 2\n",
     ")"
    ]
@@ -6822,39 +6822,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Index(['model', 'score_test', 'accuracy', 'balanced_accuracy', 'f1',\n",
-       "       'f1_macro', 'f1_micro', 'roc_auc', 'average_precision', 'precision',\n",
-       "       'recall', 'log_loss', 'pac', 'score_val', 'eval_metric',\n",
-       "       'pred_time_test', 'pred_time_val', 'fit_time',\n",
-       "       'pred_time_test_marginal', 'pred_time_val_marginal',\n",
-       "       'fit_time_marginal', 'stack_level', 'can_infer', 'fit_order',\n",
-       "       'num_features', 'num_models', 'num_models_w_ancestors', 'memory_size',\n",
-       "       'memory_size_w_ancestors', 'memory_size_min',\n",
-       "       'memory_size_min_w_ancestors', 'num_ancestors', 'num_descendants',\n",
-       "       'model_type', 'child_model_type', 'stopping_metric', 'hyperparameters',\n",
-       "       'hyperparameters_fit', 'ag_args_fit', 'features', 'compile_time',\n",
-       "       'child_hyperparameters', 'child_hyperparameters_fit',\n",
-       "       'child_ag_args_fit', 'ancestors', 'descendants'],\n",
-       "      dtype='object')"
-      ]
-     },
-     "execution_count": 23,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "predictors.columns"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 24,
    "metadata": {},
    "outputs": [
@@ -7062,7 +7029,7 @@
    "outputs": [],
    "source": [
     "predictors.to_excel(\n",
-    "    '../../data/tlp/predictorsv2.xlsx',\n",
+    "    '../../data/tlp/predictors-tvaes.xlsx',\n",
     "    index=False\n",
     ")"
    ]
