--- a/generators/sdv/tlp/generate-data.ipynb
+++ b/generators/sdv/tlp/generate-data.ipynb
@@ -1898,7 +1898,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -2060,7 +2060,7 @@
        "</svg>\n"
       ],
       "text/plain": [
-       "<graphviz.graphs.Digraph at 0x1fe3406d410>"
+       "<graphviz.graphs.Digraph at 0x1d7103bfa10>"
       ]
      },
      "execution_count": 15,
@@ -2191,7 +2191,7 @@
        "</svg>\n"
       ],
       "text/plain": [
-       "<graphviz.graphs.Digraph at 0x1fe3406ebd0>"
+       "<graphviz.graphs.Digraph at 0x1d7104071d0>"
       ]
      },
      "execution_count": 17,
