Add train and test folders

--- a/preprocessing/preprocessing.ipynb
+++ b/preprocessing/preprocessing.ipynb
@@ -8888,7 +8888,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -8897,10 +8897,10 @@
     "for i in range(10):\n",
     "    random_state = CONS_RANDOM_STATE + i  # Cambia la semilla en cada iteración\n",
     "    X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=CONS_TEST_SIZE, random_state=random_state, stratify=y)\n",
-    "    X_train.to_csv(f'../data/tlp/X_train_set_{i}.csv', index=False)\n",
-    "    X_test.to_csv(f'../data/tlp/X_test_set_{i}.csv', index=False)\n",
-    "    y_train.to_csv(f'../data/tlp/y_train_set_{i}.csv', index=False)\n",
-    "    y_test.to_csv(f'../data/tlp/y_test_set_{i}.csv', index=False)"
+    "    X_train.to_csv(f'../data/tlp/train/X_train_set_{i}.csv', index=False)\n",
+    "    X_test.to_csv(f'../data/tlp/test/X_test_set_{i}.csv', index=False)\n",
+    "    y_train.to_csv(f'../data/tlp/train/y_train_set_{i}.csv', index=False)\n",
+    "    y_test.to_csv(f'../data/tlp/test/y_test_set_{i}.csv', index=False)"
    ]
   },
   {
@@ -8946,7 +8946,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -8960,7 +8960,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.2"
+   "version": "3.11.11"
   }
  },
  "nbformat": 4,
