--- a/generators/sdv/generate-data.ipynb
+++ b/generators/sdv/generate-data.ipynb
@@ -47,13 +47,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "El dataset generado tiene que contener los datos reales más lo sintéticos o solo los sintéticos?"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "#### 4.1. GaussianCopulaSynthesizer"
    ]
   },
@@ -69,7 +62,7 @@
     "    metadata = Metadata()\n",
     "    metadata.detect_table_from_dataframe(data=df, table_name='TLP')\n",
     "    categorical_columns = [\n",
-    "    'ED_2Clases'\n",
+    "        'ED_2Clases', 'clin-frecUsoEmail'\n",
     "    ]\n",
     "    metadata.update_columns(\n",
     "        column_names=categorical_columns,\n",
@@ -342,7 +335,7 @@
     "    metadata = Metadata()\n",
     "    metadata.detect_table_from_dataframe(data=df, table_name='TLP')\n",
     "    categorical_columns = [\n",
-    "    'ED_2Clases'\n",
+    "        'ED_2Clases', 'clin-frecUsoEmail'\n",
     "    ]\n",
     "    metadata.update_columns(\n",
     "        column_names=categorical_columns,\n",
