--- a/analytics/analytics.ipynb
+++ b/analytics/analytics.ipynb
@@ -2239,7 +2239,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -2253,7 +2253,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.2"
+   "version": "3.11.11"
   }
  },
  "nbformat": 4,
