--- a/autogluon/synthetic/gc/autogluon_tlp_synthetic_gc.ipynb
+++ b/autogluon/synthetic/gc/autogluon_tlp_synthetic_gc.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -19,16 +19,38 @@
     "import numpy as np\n",
     "\n",
     "from autogluon.tabular import TabularPredictor\n",
-    "from sklearn.model_selection import train_test_split"
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.metrics import precision_recall_curve, auc"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "TIME_LIMIT = 2 * 3600"
+    "def pr_auc_Metric(y_true, y_pred):\n",
+    "    precision, recall, _ = precision_recall_curve(y_true, y_pred)\n",
+    "    score = auc(recall, precision)\n",
+    "    return score\n",
+    "\n",
+    "ag_pr_auc_scorer = make_scorer(\n",
+    "    name='pr_auc',\n",
+    "    score_func=pr_auc_Metric,\n",
+    "    optimum=1,\n",
+    "    greater_is_better=True,\n",
+    "    needs_proba=True\n",
+    "    )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "TIME_LIMIT = 2 * 3600\n",
+    "EVAL_METRIC = ag_pr_auc_scorer"
    ]
   },
   {
